// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders default 1`] = `
<a
  onClick={[Function]}
  style={
    Object {
      "textDecoration": "none",
    }
  }
>
  <IconStar
    fillColour="none"
    height={18}
    opacity="1"
    strokeColour="#696969"
  />
</a>
`;

exports[`renders disabled 1`] = `
<a
  onClick={[Function]}
  style={
    Object {
      "textDecoration": "none",
    }
  }
>
  <IconStar
    fillColour="none"
    height={18}
    opacity="0.4"
    strokeColour="#696969"
  />
</a>
`;

exports[`renders selected 1`] = `
<a
  onClick={[Function]}
  style={
    Object {
      "textDecoration": "none",
    }
  }
>
  <IconStar
    fillColour="#006699"
    height={18}
    opacity="1"
    strokeColour="none"
  />
</a>
`;
